--- a/src/styles/tentang.css
+++ b/src/styles/tentang.css
@@ -1,5 +1,6 @@
 .tentangTitle {
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .tentangPara {
@@ -11,7 +12,26 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    overflow-x: scroll;
+    overflow-x: hidden;
+    
+}
+
+.images {
+animation: scrImages 15s linear infinite;
+}
+
+@keyframes scrImages {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateX(-200%);
+    }
+}
+
+.tentangArrow {
+    z-index: 2;
 }
 
 img {
