--- a/src/styles/tentang.css
+++ b/src/styles/tentang.css
@@ -5,9 +5,11 @@
 
 .tentangPara {
     font-size: 1.25rem;
+    font-weight: 600;
 }
 
 .tentangImages {
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
@@ -16,8 +18,32 @@
     
 }
 
+.tentangImages::before,
+.tentangImages::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 5%;
+    height: 100%;
+    z-index: 1;
+    pointer-events: none; /* Allows clicks to pass through */
+}
+
+.tentangImages::before {
+    left: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 1), transparent);
+}
+
+.tentangImages::after {
+    right: 0;
+    background: linear-gradient(to left, rgba(255, 255, 255, 1), transparent);
+}
+
 .images {
-animation: scrImages 15s linear infinite;
+    animation: scrImages 20s linear infinite;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 @keyframes scrImages {
@@ -32,9 +58,4 @@ animation: scrImages 15s linear infinite;
 
 .tentangArrow {
     z-index: 2;
-}
-
-img {
-    width: 100%;
-    height: fit-content;
 }
