--- a/src/styles/infober.css
+++ b/src/styles/infober.css
@@ -28,7 +28,7 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    font-size: 1.25rem;
+    font-size: var(--NormalText);
 }
 
 a {
