--- a/src/styles/tentang.css
+++ b/src/styles/tentang.css
@@ -1,61 +1,11 @@
+
+
 .tentangTitle {
-    font-size: 2.5rem;
+    font-size: var(--Title);
     text-align: center;
 }
 
 .tentangPara {
-    font-size: 1.25rem;
+    font-size: var(--Paragraph);
     font-weight: 600;
-}
-
-.tentangImages {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    overflow-x: hidden;
-    
-}
-
-.tentangImages::before,
-.tentangImages::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    width: 5%;
-    height: 100%;
-    z-index: 1;
-    pointer-events: none; /* Allows clicks to pass through */
-}
-
-.tentangImages::before {
-    left: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 1), transparent);
-}
-
-.tentangImages::after {
-    right: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 1), transparent);
-}
-
-.images {
-    animation: scrImages 20s linear infinite;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-@keyframes scrImages {
-    0% {
-        transform: translateY(0);
-    }
-
-    100% {
-        transform: translateX(-200%);
-    }
-}
-
-.tentangArrow {
-    z-index: 2;
 }
