--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -61,3 +61,14 @@
 .pad-20 {
     padding: 20px;
 }
+
+@media only screen and (max-width: 720px) {
+    .halfHorizontal {
+        flex-direction: column;
+    }
+
+    .halfWidth {
+        width: 100%;
+        height: 50%;
+    }
+}
