--- a/src/styles/kegiatan.css
+++ b/src/styles/kegiatan.css
@@ -10,3 +10,17 @@
     width: 100%;
     height: fit-content;
 }
+
+#AnKMobile {
+    display: none;
+}
+
+@media only screen and (max-width: 720px) {
+    #AnKPC {
+        display: none;
+    }
+
+    #AnKMobile {
+        display: block;
+    }
+}
