--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
     font-family: "DM Sans";
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 }
 
 :root {
